--- a/Java/nbproject/private/private.properties
+++ b/Java/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/santiago/.netbeans/8.0.2/build.properties
+user.properties.file=/home/agustin/.netbeans/8.0.2/build.properties
